4.0
	+ WAN failover now uses cron instead of old events module
	+ Set version to 4.0
	+ Check external IP against different providers to be more reliable
	+ Refactor and include internalNetworks method used by dns and
	  openchange modules
	+ Fixed problem in gateway table when gateways go away when
	  syncing rows
	+ Added vlans key as exclude replication key
	+ Add nameserverDelete and nameserverAdded callbacks to NetworkObserver
3.5.1
	+ Added defensive code to DNSResolver to avoid ifaces down after crash
3.5
	+ Changed ifup coditions on first time save
	+ Changed validation of setDHCPAddress, setRealPPPIface and
	  DHCPCleanUp to allow pseudoterminal interfaces, this is needed for l2tp
	+ Allow network proxy which is listening on localhost
	+ Fixed error which skipped the execution of _preSetConf
	+ Added No-IP to DynDNS
	+ Fix get router MAC after latest changes in Net::ARP library
	+ Updated DynDNS server in ddclient configuration
	+ Set version to 3.5
	+ Fixed wrong call when cleaning up a bundled interface
3.4
	+ Import current DHCP addresses in first setup and when enabling module
	+ Don't allow domain names as target of failover tests, usability
	  changes in failover rules
	+ Removed DNS resolution failover test
	+ Save module config after initialSetup
	+ Added flag to notify when an ifup is set
	+ Wait a bit in multigwRoutes to give time to dhcp/pppoe to register addresses
	+ Implement replicationExcludeKeys() to avoid replication of ifaces in HA
	+ Migrated to use Plack / PSGI API instead of the CGI one
	+ When adding a new IP (viface or static iface) it is checked to avoid
	  collision with the current HA floating IPs
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Added bonding support (contribution by Vsevolod Kukol)
	+ Specifiy local address in failover tests to avoid vlan interface problems
	+ Fix Dynamic DNS with Zentyal Remote as provider when the
	  registration wizard is done